--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,61 +1,43 @@
 <div class="container">
   <div class="row justify-content-md-center mt-3 p-2">
-    <form class="col-12 col-md-6 card p-3 p-md-5">
+    <form class="col-12 col-md-6 card p-3 p-md-5" (submit)="submit()">
       <div class="d-flex justify-content-center">
         <img class="mb-4" src="assets/logo-marvel.webp" alt="" width="120" />
       </div>
       <h1 class="h3 mb-3 fw-normal text-center">Registro</h1>
-
       <div class="form-floating mb-3">
-        <input
-          type="email"
-          class="form-control"
-          id="floatingInput"
-          placeholder="name@example.com"
-        />
-        <label for="floatingInput">Nombre</label>
+        <input type="text" class="form-control" id="floatingId" [(ngModel)]="identificacion" name="identificacion" />
+        <label for="floatingId">Identificación</label>
       </div>
       <div class="form-floating mb-3">
-        <input
-          type="email"
-          class="form-control"
-          id="floatingInput"
-          placeholder="name@example.com"
-        />
-        <label for="floatingInput">Apellido</label>
+        <input type="text" class="form-control" id="floatingName" [(ngModel)]="nombre" name="nombre" />
+        <label for="floatingName">Nombre</label>
       </div>
       <div class="form-floating mb-3">
-        <input
-          type="email"
-          class="form-control"
-          id="floatingInput"
-          placeholder="name@example.com"
-        />
-        <label for="floatingInput">Email</label>
+        <input type="text" class="form-control" id="floatingLastName" [(ngModel)]="apellido" name="apellido" />
+        <label for="floatingLastName">Apellido</label>
       </div>
       <div class="form-floating mb-3">
-        <input
-          type="password"
-          class="form-control"
-          id="floatingPassword"
-          placeholder="Password"
-        />
+        <input type="email" class="form-control" id="floatingEmail" [(ngModel)]="email" name="email" />
+        <label for="floatingEmail">Email</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="password" class="form-control" id="floatingPassword" [(ngModel)]="password" name="password" />
         <label for="floatingPassword">Contraseña</label>
       </div>
       <div class="form-floating mb-3">
-        <input
-          type="password"
-          class="form-control"
-          id="floatingPassword"
-          placeholder="Password"
-        />
-        <label for="floatingPassword">Confirmar Contraseña</label>
+        <input type="password" class="form-control" id="floatingConfirmPassword" [(ngModel)]="confirmPassword" name="confirmPassword" />
+        <label for="floatingConfirmPassword">Confirmar Contraseña</label>
       </div>
       <div class="d-flex mt-2">
         <button class="btn btn-primary w-100 py-2" type="submit">Registrarse</button>
         <a class="btn btn-link w-100 py-2" routerLink="/login" routerLinkActive="active">Volver</a>
       </div>
-
+      @if(errorMessage) {
+        <div class="alert alert-danger mt-2" role="alert">
+          {{ errorMessage }}
+        </div>
+      }
       <p class="mt-5 mb-3 text-body-secondary text-center">&copy; 2024</p>
     </form>
   </div>
