Add to favorites

--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,1 +1,2 @@
-<p>favorites works!</p>
+
+<app-comics-list [comics]="favorites" [loading]="loading" [validateIsFavorite]="validateIsFavorite" (addToFavoriteEmitter)="onToggleFavorite($event)" listTitle="Mis Favoritos"></app-comics-list>
