--- a/src/app/shared/components/comics-list/comics-list.component.html
+++ b/src/app/shared/components/comics-list/comics-list.component.html
@@ -1,9 +1,9 @@
 <div class="overflow-auto">
     <div class="container-fluid mt-2">
-        <h3>Listado de Comics</h3>
+        <h3>{{listTitle}}</h3>
         <div class="row">
             @for (comic of comics; track comic.id) {
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 col-lg-2">
                     <div class="card m-2 mw-100">
                         <div class="row g-0">
                             <div class="col-12 d-none d-md-block img-container">
@@ -15,6 +15,8 @@
                                     <p class="card-text">
                                         <small class="text-muted">$ {{comic.prices[0].price}}</small>
                                     </p>
+                                    
+                                    <button type="button" class="btn btn-outline-info" (click)="onToggleFavorite(comic)">{{ !validateIsFavorite(comic) ? 'Agregar a Favoritos': 'Quitar de Favoritos'}}</button>
                                 </div>
                             </div>
                         </div>
@@ -26,7 +28,6 @@
                 }@else {
                     <p>No se han encontrado comics</p>
                 }
-
             }
         </div>
     </div>
