--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" 
-          routerLink="/comics"
+          routerLink="/favorites"
           routerLinkActive="active"
           ariaCurrentWhenActive="page">Mis Favoritos</a>
         </li>
