--- a/src/app/shared/components/comics-list/comics-list.component.html
+++ b/src/app/shared/components/comics-list/comics-list.component.html
@@ -3,7 +3,7 @@
         <h3>{{listTitle}}</h3>
         <div class="row">
             @for (comic of comics; track comic.id) {
-                <div class="col-12 col-md-4 col-lg-2">
+                <div class="col-12 col-md-4 col-lg-2" (click)="openDetail(comic)">
                     <div class="card m-2 mw-100">
                         <div class="row g-0">
                             <div class="col-12 d-none d-md-block img-container">
@@ -16,7 +16,7 @@
                                         <small class="text-muted">$ {{comic.prices[0].price}}</small>
                                     </p>
                                     
-                                    <button type="button" class="btn btn-outline-info" (click)="onToggleFavorite(comic)">{{ !validateIsFavorite(comic) ? 'Agregar a Favoritos': 'Quitar de Favoritos'}}</button>
+                                    <button type="button" class="btn btn-outline-info" (click)="onToggleFavorite(comic, $event)">{{ !validateIsFavorite(comic) ? 'Agregar a Favoritos': 'Quitar de Favoritos'}}</button>
                                 </div>
                             </div>
                         </div>
