--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -31,7 +31,10 @@
           ariaCurrentWhenActive="page">Mis Favoritos</a>
         </li>
       </ul>
+      <div class="p-3">
 
+      Bienvenido, {{user?.email }}
+      </div>
       <button class="nav-link text-danger" (click)="signOut()">Cerrar Sesión</button>
     </div>
   </div>
